--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,18 @@
     margin-left: 10px;
 
 }
+img{
+    width: 10px;
+   
+}
+table ,
+td,
+tr{
+    border-style: solid 1px;
+    width: 300px;
+    height: 300px;
+
+}
+td{
+    border: 2px solid;
+}
